# ids-rs

./: .gitignore  CORE.md  Cargo.toml  DATAGEN.md  ERROR.md  IDS.md  LASSO.md  LOADER-REFACTOR.md  LOADER.md  MIGRATION_MISSING_FUNCTIONALITY.md  PIPELINE_INTEGRATION.md  SECONDARY_DIAGNOSIS_INTEGRATION.md  SINGLE_CRATE_REFACTORING_PLAN.md  TABLEPROVIDER_IMPLEMENTATIONS.md  TODO.md  TROUBLE.md  TYPES.md  analysis.md  bump_version.sh  cdef-cohort-lpr.md  ids-rs-reimplementation-documentation.md  indicatif.md  justfile  matching_stats.csv  rayon_docs.txt  register_structure.txt  run.sh  update-accessors.sh  update-balance-checkers.sh
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  cli_internal.rs  lib.rs  main.module  main.rs  main_functions.rs  main_run.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: errors.rs  lib.rs  matching_quality.rs  plotting.rs  sampler.rs  utils.rs
crates/core/src/utils/: console.rs
crates/covariates/: Cargo.toml  README.md  REFACTORING-SUMMARY.md
crates/covariates/src/: balance.rs  converter.rs  error.rs  lib.rs  matched_pairs.rs  models.rs  prelude.rs  reporting.rs  storage.rs
crates/covariates/src/balance/: cache.rs  checker.rs  legacy_cache.rs  memory.rs  metrics.rs  mod.rs  optimization.rs  processor.rs  results.rs
crates/covariates/src/balance/checker/: README.md  balance_calculation.rs  builder.rs  mod.rs  paired_analysis.rs  performance.rs
crates/covariates/src/balance/proc_impl/: README.md  categorical.rs  config.rs  (+4 more)
crates/covariates/src/core/: config.rs  mod.rs  registry.rs
crates/covariates/src/data/: mod.rs  storage.rs
crates/covariates/src/matched_pairs/: loader.rs  mod.rs  record.rs
crates/covariates/src/processing/: factory.rs  mod.rs  processor.rs
crates/covariates/src/processors/: demographics.rs  education.rs  factory.rs  income.rs  mod.rs  occupation.rs
crates/covariates/src/reporting/: balance_report.rs  comprehensive_report.rs  csv_report.rs  mod.rs  structured_output.rs
crates/covariates/tests/: README.md  diagnostic.rs
crates/datagen/: Cargo.toml
crates/datagen/src/: config.rs  error.rs  lib.rs  models.rs  writer.rs
crates/datagen/src/generators/: akm.rs  bef.rs  family.rs  ind.rs  mod.rs  pediatric.rs  uddf.rs
crates/ids/: Cargo.toml  README.md  pyproject.toml
crates/ids-arrow/: Cargo.toml
crates/ids-arrow/src/: error.rs  lib.rs  reader.rs  schema.rs  store.rs  types.rs
crates/ids-cli/: Cargo.toml
crates/ids-cli/src/: main.rs
crates/ids-core/: Cargo.toml
crates/ids-core/src/: cli.rs  errors.rs  lib.rs  matching_quality.rs  plotting.rs  utils.rs
crates/ids-covariates/: Cargo.toml
crates/ids-covariates/src/: balance.rs  converter.rs  error.rs  lib.rs  loader.rs  matched_pairs.rs  models.rs  reporting.rs  storage.rs
crates/ids/python/ids_rs/: __init__.py
crates/ids/python/ids_tk/: __init__.py
crates/ids/python/ids_toolkit/: __init__.py
crates/ids/src/: cli.rs  diagnostic.rs  error.rs  lib.rs  main.rs  main_run.rs
crates/ids/src/cli/: mod.rs  parser.rs  types.rs
crates/ids/src/commands/: balance.rs  config.rs  generate.rs  mod.rs  sample.rs
crates/ids/src/core/: error.rs  mod.rs
crates/ids/src/prelude/: mod.rs
crates/ids/src/utils/: mod.rs  paths.rs  reports.rs  setup.rs
crates/loader/: Cargo.toml  README.md
crates/loader/src/: config.rs  lib.rs  parallel_loader.rs  parquet.rs  polars_loader.rs  progress.rs  reader.rs  schema.rs
crates/loader/src/config/: env.rs  loader_config.rs  mod.rs  path.rs
crates/loader/src/formats/: mod.rs  parquet.rs
crates/loader/src/loaders/: base.rs  mod.rs  parallel.rs  parquet.rs  polars.rs  sequential.rs
crates/loader/src/readers/: custom_path.rs  file.rs  mod.rs
crates/loader/src/registry/: akm.rs  bef.rs  family.rs  ind.rs  mod.rs  uddf.rs
crates/loader/src/schema/: akm.rs  bef.rs  family.rs  ind.rs  mod.rs  uddf.rs  utils.rs
crates/loader/src/ui/: console.rs  mod.rs  progress.rs
crates/loader/src/utils/: mod.rs  parquet.rs  path.rs
crates/loader/tests/: test_edge_cases.rs  test_formats.rs  test_helpers.rs  test_loaders.rs  test_registry.rs
crates/parquet-integration/: Cargo.toml
crates/parquet-integration/src/: config.rs  engine.rs  error.rs  filter.rs  lib.rs  loader.rs  optimize.rs  parallel.rs  result.rs  utils.rs
crates/py/: Cargo.toml  README.md  pyproject.toml
crates/py/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/benches/: arrow_access.rs  arrow_backend.rs  covariate_processing.rs  date_handling.rs  pnr_lookup.rs
crates/types/benches/utils/: mod.rs
crates/types/docs/: console.md
crates/types/examples/: feature_examples.rs
crates/types/src/: arrow_utils.rs  convert.rs  error.rs  family.rs  lib.rs  models.rs  pnr.rs  polars_utils.rs  prelude.rs  snapshot.rs  storage.rs  traits.rs  translation.rs
crates/types/src/arrow/: access.rs  convert.rs  mod.rs  utils.rs
crates/types/src/arrow_utils/: mod.rs  store.rs  traits.rs  types.rs
crates/types/src/error/: context.rs  conversion.rs  example.rs  legacy_compat.rs  macros.rs  migration-guide.md  mod.rs  test_helpers.rs
crates/types/src/family/: mod.rs  relations.rs  store.rs
crates/types/src/models/: covariate.rs  mod.rs  pnr.rs  time_varying.rs
crates/types/src/storage/: mod.rs
crates/types/src/store/: arrow_backend.rs  base.rs  combined.rs  data_store.rs  mod.rs  time_varying_backend.rs
crates/types/src/traits/: access.rs  cacheable.rs  mod.rs  processing.rs  utils.rs
crates/types/src/translation/: mod.rs
crates/types/src/utils/: logging.rs  mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  date.rs  error.rs  lib.rs  logging.rs  rich_console.rs  string.rs
crates/utils/src/date_utils/: core.rs  formatting.rs  mod.rs  parsing.rs  periods.rs
crates/utils/src/file_patterns/: mod.rs
crates/utils/src/pnr_utils/: generation.rs  mod.rs  types.rs  validation.rs
crates/utils/src/string_utils/: case_conversion.rs  formatting.rs  mod.rs  parsing.rs
docs/legacy/utils/: Cargo.toml
docs/legacy/utils/src/: date.rs  lib.rs  logging.rs
temp/ids-py-v0.1.0/: Cargo.toml  pyproject.toml
(+524 files in other folders)
