[package]
name = "ids-rs"
version = "0.1.0"
edition = "2021"
authors = ["IDS-RS Team"]
description = "Integrated Data System for Research in Rust"

[dependencies]
# Error handling
thiserror = "2.0.12"

# Logging
log = "0.4"

# Date handling
chrono = "0.4"

# CLI
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0"
indicatif = "0.17"

# Data processing
arrow = "55.0"
parquet = "55.0"
rayon = "1.8.0"

# Utilities
rand = "0.9.1"
itertools = "0.14"

[lib]
name = "ids_rs"
path = "src/lib.rs"

[[bin]]
name = "ids-rs"
path = "src/main.rs"
