[package]
name = "ids-rs"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Kragholm"]
description = "Integrated Data System for Research in Rust"

[dependencies]
# Error handling
thiserror = "2.0.12"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Date handling
chrono = "0.4"

# CLI
clap = { version = "4.5.37", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
colored = "3.0"
indicatif = "0.17"

# Data processing
arrow = { version = "55.0", features = ["chrono-tz"] }
parquet = { version = "55.0", features = ["arrow"] }
rayon = "1.8.0"

# Utilities
rand = "0.9.1"
itertools = "0.14"

[lib]
name = "ids_rs"
path = "src/lib.rs"

[[bin]]
name = "ids-rs"
path = "src/main.rs"
