[package]
name = "ids-rs"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Kragholm"]
description = "Integrated Data System for Research in Rust"

[dependencies]
# Error handling
thiserror = "2.0.12"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Date handling
chrono = "0.4"

# CLI
clap = { version = "4.5.37", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
colored = "3.0"
indicatif = "0.17"

# Data processing
datafusion = { version = "47.0.0", default-features = false, features = [
    "parquet",
] }
arrow = { version = "55.0", features = ["chrono-tz"] }
async-trait = "0.1.88"
rayon = "1.8.0"
tokio = { version = "1.44.2", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "parking_lot",
] }
futures = "0.3"

# Utilities
rand = "0.9.1"
itertools = "0.14"
rustc-hash = "2.1.1"
smallvec = "1.15.0"
regex = "1.11.1"
uuid = { version = "1.7.0", features = ["v4"] }
snmalloc-rs = { version = "0.3.8", features = ["lto", "native-cpu"] }
once_cell = "1.19.0"

[lib]
name = "ids_rs"
path = "src/lib.rs"

[[bin]]
name = "ids-rs"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 16 # Reduce to 1 to increase performance
