[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
core = { path = "../core" }
covariates = { path = "../covariates" }
loader = { path = "../loader" }
types = { path = "../types" }
datagen = { path = "../datagen" }
clap.workspace = true
log.workspace = true
log4rs.workspace = true
smallvec.workspace = true
chrono.workspace = true

[[bin]]
name = "ids-py"
path = "src/main.rs"
