[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
log.workspace = true
log4rs.workspace = true
csv.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
types = { path = "../types" }

colored.workspace = true
dashmap.workspace = true
fastrand.workspace = true
hashbrown.workspace = true
humantime.workspace = true
indicatif.workspace = true
parking_lot.workspace = true
plotters.workspace = true
rand.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
