[package]
name = "covariates"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
core = { path = "../core" }
loader = { path = "../loader" }
types = { path = "../types" }
chrono = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }
statrs = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-utils = { workspace = true }
crossbeam-deque = { workspace = true }
num_cpus = "1.16.0"
ahash = "0.8.11"
hashbrown = { workspace = true }
once_cell = "1.19.0"

[dev-dependencies]
tempfile = "3.10.1"
