[package]
name = "datagen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
types = { path = "../types" }
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
parquet.workspace = true
chrono.workspace = true
csv.workspace = true
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
indicatif = "0.17"
