[package]
name = "datagen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
types = { path = "../types" }
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
parquet.workspace = true
chrono.workspace = true
csv.workspace = true
rand.workspace = true
rand_distr.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indicatif.workspace = true
hashbrown.workspace = true
