[package]
name = "ids-arrow"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
thiserror.workspace = true
log.workspace = true
arrow = { version = "54.1.0", features = ["prettyprint"] }
arrow-array = "54.1.0"
arrow-schema = "54.1.0"
arrow-select = "54.1.0"
parquet = { version = "54.1.0", features = ["arrow"] }
