[package]
name = "ids-cli"
version.workspace = true
edition.workspace = true

[dependencies]
ids-core = { path = "../ids-core" }
ids-covariates = { path = "../ids-covariates" }
clap = { version = "4.5", features = ["derive"] }
log = { workspace = true }
log4rs = { version = "1.2", features = ["console_appender"] }
