[package]
name = "ids-core"
version.workspace = true
edition.workspace = true

[dependencies]
bit-vec = "0.8.0"
chrono.workspace = true
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
csv.workspace = true
dashmap = "6.1.0"
fastrand = "2.3.0"
hashbrown = "0.15.2"
humantime = "2.1.0"
indicatif = "0.17.11"
log.workspace = true
log4rs = { version = "1.2", features = [
    "console_appender",
] } # Instead of env_logger
mimalloc = "0.1.43"
ndarray = { version = "0.16.1", features = ["rayon"] }
parking_lot = "0.12.3"
plotters = "0.3.7"
rand = "0.9.0"
rand_distr = "0.5.0"
rayon.workspace = true
rustc-hash = "2.1.1"
serde.workspace = true
smallvec = "1.13.2"
thiserror.workspace = true
