[package]
name = "ids-covariates"
version.workspace = true
edition.workspace = true

[dependencies]
ids-core = { path = "../ids-core" }
chrono.workspace = true
csv.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
rayon = "1.10.0"
dashmap = "6.1.0"
statrs = "0.18"
