[package]
name = "ids-covariates"
version.workspace = true
edition.workspace = true

[dependencies]
ids-core = { path = "../ids-core" }
ids-arrow = { path = "../ids-arrow" }
chrono.workspace = true
csv.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
rayon.workspace = true
dashmap = "6.1.0"
statrs = "0.18"
