[package]
name = "ids"
version.workspace = true
edition.workspace = true

[dependencies]
core = { path = "../core" }
covariates = { path = "../covariates" }
loader = { path = "../loader" }
types = { path = "../types" }
datagen = { path = "../datagen" }
clap.workspace = true
log.workspace = true
env_logger.workspace = true
log4rs.workspace = true
smallvec.workspace = true
chrono.workspace = true
indicatif-log-bridge.workspace = true
indicatif.workspace = true
colored.workspace = true
hashbrown.workspace = true
serde_json.workspace = true
thiserror = "1.0"


[[bin]]
name = "ids"
path = "src/main.rs"
