[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ids-rs"
version = "1.0.0"
description = "Incidence Density Sampling CLI Tool"
authors = [
    {name = "Tobias Kragholm", email = "tkragholm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
]

[tool.maturin]
# Configure maturin to build and package the binary
bindings = "bin"  # We're creating a binary package
module-name = "ids_rs"
manifest-path = "Cargo.toml"
python-source = "python"  # Directory with Python code