[package]
name = "loader"
version.workspace = true
edition.workspace = true

[features]
default = []
polars_backend = ["polars", "polars-arrow", "lazy_static"]
schema_json = []

[dependencies]
chrono.workspace = true
thiserror.workspace = true
log.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
parquet.workspace = true
indicatif.workspace = true
types = { path = "../types" }
rayon.workspace = true
crossbeam-channel.workspace = true
crossbeam-deque.workspace = true
parking_lot.workspace = true
num_cpus = "1.16.0"
hashbrown.workspace = true
regex = "1.10.3"
lazy_static = { version = "1.4.0", optional = true }

# Optional Polars dependencies
polars = { version = "0.46.0", optional = true, features = ["lazy", "parquet", "dtype-date", "strings", "temporal"] }
polars-arrow = { version = "0.46.0", optional = true }
