[package]
name = "loader"
version.workspace = true
edition.workspace = true

[features]
default = []
schema_json = []

[dependencies]
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
log.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
parquet.workspace = true
indicatif.workspace = true
types = { path = "../types" }
rayon.workspace = true
crossbeam-channel.workspace = true
crossbeam-deque.workspace = true
parking_lot.workspace = true
num_cpus = "1.16.0"
hashbrown.workspace = true
regex = "1.10.3"
lazy_static = { version = "1.4.0", optional = true }
once_cell = "1.19.0"
itertools = "0.14.0"

[dev-dependencies]
datagen = { path = "../datagen" }
tempfile = "3.10.1"
env_logger = "0.11.3"
rand = "0.8.5"
