[package]
name = "parquet-integration"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Kragholm"]
description = "High-performance Parquet reader integration for ids-rs"

[dependencies]
arrow = { version = "54.2.1", features = ["prettyprint"] }
arrow-array = "54.2.1"
arrow-schema = "54.2.1"
arrow-select = "54.2.1"
chrono = "0.4"
futures = "0.3.31"
hashbrown = "0.14.3"
lazy_static = "1.4.0"
log = "0.4.21"
num_cpus = "1.16.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
parquet = { version = "54.2.1", features = ["async"] }
rayon = "1.10.0"
sysinfo = "0.29.10"
thiserror = "1.0.58"
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "time"] }

[features]
default = ["types-integration"]
types-integration = ["types"]

[dependencies.types]
path = "../types"
optional = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tempfile = "3.10.1"