[package]
name = "py"
version.workspace = true
edition.workspace = true

[dependencies]
core = { path = "../core" }
covariates = { path = "../covariates" }
types = { path = "../types" }
loader = { path = "../loader" }
datagen = { path = "../datagen" }
clap.workspace = true
log.workspace = true
log4rs.workspace = true
chrono = { workspace = true }

[[bin]]
name = "ids"
path = "../cli/src/main.rs"
