[package]
name = "py"
version.workspace = true
edition.workspace = true

[dependencies]
core = { path = "../core" }
covariates = { path = "../covariates" }
types = { path = "../types" }
loader = { path = "../loader" }
datagen = { path = "../datagen" }
clap.workspace = true
log.workspace = true
log4rs.workspace = true
env_logger.workspace = true
chrono = { workspace = true }
indicatif.workspace = true
indicatif-log-bridge.workspace = true
colored = "2.0"

[[bin]]
name = "ids-py"
path = "src/bin/main.rs"
