[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ids-rs"
version = "0.2.0"
description = "Incidence Density Sampling CLI Tool"
authors = [{ name = "Tobias Kragholm", email = "tkragholm@gmail.com" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
]

[tool.maturin]
bindings = "bin"
