[package]
name = "types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
csv.workspace = true
thiserror.workspace = true
anyhow.workspace = true
color-eyre = "0.6.2"
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
parquet.workspace = true
dashmap.workspace = true
rand.workspace = true
log.workspace = true
serde_json.workspace = true
hashbrown.workspace = true
num_cpus = { version = "1.16.0", optional = true }
