[package]
name = "utils"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log = { workspace = true, features = ["std"] }
csv.workspace = true
colored.workspace = true
anyhow.workspace = true
tempfile.workspace = true
types = { path = "../types" }